<resources>
    <string name="app_name">Domix</string>
    <string name="const_sharedpreference_file_name">domx_prefs</string>
    <string name="const_sharedPref_key_activeNotification">activeNotification</string>
    <string name="const_sharedPref_key_backfromServiceNotification">backFromServiceNotification</string>
    <string name="const_sharedPref_key_lat_device">latitude</string>
    <string name="const_sharedPref_key_lon_device">longitude</string>
    <string name="const_sharedPref_key_searchDelivery">searchDelivery</string>
    <string name="const_sharedPref_key_button_i_am_here">buttonImHere</string>
    <string name="const_sharedPref_key_created_service_count_im_here">serviceCreatedImHere</string>
    <string name="const_sharedPref_key_charge_after_two_minutte">serviceChargeAfterMinute</string>
    <string name="message_location_deactivate">¿Activar la ubicación de precisión alta?</string>
    <string name="message_yes">Si</string>
    <string name="message_no">No</string>
    <string name="text_no_internet_connection">No hay conexión a Internet</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="button_text_login">Ingresar</string>
    <string name="text_forgot_password"><u>Olvidé mi contraseña</u></string>
    <string name="text_dont_have_account">¿No tienes una cuenta?</string>
    <string name="text_create_here"><u>Crea una aquí</u></string>
    <string name="message_curiosly_no_detected_your_gps">Hubo un problema con tu GPS, ¿deseas habilitarlo nuevamente?</string>
    <string name="text_registro">Registro</string>
    <string name="button_back">Volver</string>
    <string name="button_text_createaccount">Únete</string>
    <string name="text_terms_and_conditions">Términos y condiciones de uso</string>
    <string name="text_agree">Acepto</string>
    <string name="text_do_not_agree">No acepto</string>
    <string name="title_home">Inicio</string>
    <string name="button_be_user">Solicitar</string>
    <string name="button_be_domiciliary">Entregar</string>
    <string name="text_accumulated_beam">Haz acumulado</string>
    <string name="text_choose_type_of_vehicle">Selecciona el medio de transporte</string>
    <string name="notification_incoming_order_title">¡Nuevo servicio!</string>
    <string name="notification_incoming_order_text">Hay un nuevo servicio disponible</string>
    <string name="notification_incoming_deliveryman_title">¡Encontramos un domiliciario!</string>
    <string name="notification_incoming_deliveryman_text">Un domiciliario ha tomado tu orden</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="hint_order_title">Título:</string>
    <string name="hint_order_description">Descripción:</string>
    <string name="hint_payment">Costo de servicio: </string>
    <string name="hint_first_name">Nombres</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_what_should_domiciliary">¿Qué debe hacer el domiciliario aquí?</string>
    <string name="hint_select_initial_point">Seleccionar punto inicial</string>
    <string name="hint_select_final_point">Seleccionar punto final</string>
    <string name="hint_option_for_deliveryman">Opción para domiciliario</string>
    <string name="hint_dni">Documento de identificación</string>
    <string name="text_welcome_user">Bienvenido</string>
    <string name="text_what_do_you_want_to_do">¿Que quieres hacer?</string>
    <string name="text_from">Desde:</string>
    <string name="text_to">Hasta:</string>
    <string name="text_header">Título:</string>
    <string name="text_size_order">Tamaño:</string>
    <string name="text_make_initial_point">1er punto:</string>
    <string name="text_make_final_point">2do punto:</string>
    <string name="text_description">Descripción:</string>
    <string name="text_proffer">Costo del domicilio</string>
    <string name="text_city">Ciudad:</string>
    <string name="text_requested">Hora de solicitud:</string>
    <string name="text_domiciliary_attend_you">Datos del domiciliario que te atenderá</string>
    <string name="text_comming_soon">Esperando un domiciliario...</string>
    <string name="text_name_domiciliary">Domiciliario</string>
    <string name="text_number_phone_domiciliary">Celular</string>
    <string name="text_marker_from">Desde aquí</string>
    <string name="text_marker_to">Hasta aquí</string>
    <string name="text_qualify_user">Califica al usuario</string>
    <string name="text_qualify_deliveryman">Califica al domiciliario</string>
    <string name="text_user_name_request">Solicitó:</string>
    <string name="text_user_phone_request">Teléfono:</string>
    <string name="text_how_much_user_star">Califica al usuario</string>
    <string name="text_how_much_deliveryman_star">Califica al domiciliario por este servicio</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="text_item_settings">Configuración</string>
    <string name="text_history_drawer">Historial</string>
    <string name="text_promotions_drawer">Promociones</string>
    <string name="text_notifications_drawer">Notificaciones</string>
    <string name="text_setup_drawer">Configuración</string>
    <string name="text_contact_user">Diligencia los campos</string>
    <string name="text_choose_from_gallery">Galería</string>
    <string name="text_make_your_order">¡Haz tu pedido!</string>
    <string name="text_looking_order_near">Buscando domicilios cerca...</string>
    <string name="text_make_payment">Realizar pago</string>
    <string name="text_your_rating">Tu Calificación: </string>
    <string name="text_user_with">Usuario </string>
    <string name="text_domiciliary_with">Domiciliario </string>
    <string name="text_new">Nuevo</string>
    <string name="text_credit_card">Tarjeta de crédito</string>
    <string name="text_cash">Efectivo</string>
    <string name="text_dimensions">Dimensiones: </string>
    <string name="text_payment_method">Método de pago</string>
    <string name="text_terms_condictions">Acepto Términos y Condiciones</string>
    <string name="text_pay_through">Pagar a través de:</string>
    <string name="text_method_payment_efecty">Puntos Efecty</string>
    <string name="text_method_payment_pse">PSE</string>
    <string name="text_method_payment_creditcard">Tarjeta de crédito</string>
    <string name="text_my_rate">Mi puntaje</string>
    <string name="text_as_deliveryman">Como domiciliario:</string>
    <string name="text_as_user">Como usuario:</string>
    <string name="text_active_notifications">Permitir notificaciones</string>
    <string name="text_delete_account">Borrar mi cuenta en Domix</string>
    <string name="text_change_password">Cambiar mi contraseña</string>
    <string name="text_confirm_identity">Confirmar credenciales de cuenta</string>
    <string name="text_notice_before_delete_account">Ten en cuenta que al eliminar tu cuenta en Domix, perderás tu historial de actividad, acceso a la plataforma, y tus datos de contacto serán eliminados</string>
    <string name="text_minimum_amount">El pago mínimo es de</string>
    <string name="text_letter">Sobre (Carta u Oficio)</string>
    <string name="text_bag">Baúl o maletero (30x30x30 cms)</string>
    <string name="text_trunk">Maleta (40x38x38 cms)</string>
    <string name="text_grid">Parrilla</string>
    <string name="text_my_credit"><b>Mi crédito:</b></string>
    <string name="text_not_receives_cash">No recibes dinero en efectivo</string>
    <string name="text_would_receive">Debes recibir</string>
    <string name="text_empty_field">Vacío</string>
    <string name="text_use_credit">Usar crédito</string>
    <string name="text_message_fill_in_data">Alguno de estos datos podrían no estar diligenciados:\n\n
            ● Nombres y/o apellidos\n
            ● Documento de identificaión\n
            ● Número de celular\n
            ● Agregar foto de perfíl\n\n
            Esto nos ayuda a ofrecer un servicio más seguro\n\n
            ¿Deseas terminar de suministrar la información?
            </string>
    <string name="button_upload">Subir</string>
    <string name="button_change_password">Cambiar</string>
    <string name="button_delete_account">Borrar cuenta</string>
    <string name="button_confirm">Confirmar</string>
    <string name="title_activity_user_profile">Perfíl</string>
</resources>