<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    android:fitsSystemWindows="true"
    tools:context="co.domix.android.customizer.view.Profile">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/content_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.didierzuniga.domix.customizer.view.ProfileActivity"
        tools:showIn="@layout/activity_profile"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#d7d7d7"
            android:layout_gravity="center"/>
        <ProgressBar
            android:id="@+id/progressBarProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
        <Button
            android:id="@+id/choosePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_choose_from_gallery"/>
        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:visibility="gone"
            android:text="@string/button_upload"/>
        <TextView
            android:id="@+id/idFirstnameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:hint="@string/hint_first_name"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idLastnameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:hint="@string/hint_last_name"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idEmailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:hint="@string/hint_email"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/idMyCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_my_credit"
            android:layout_marginTop="8dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/text_my_rate"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idRateAsUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/text_as_user"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idRateAsDomi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/text_as_deliveryman"
            android:textSize="20sp"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>